# summa-aggregation

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
benches/: build_aggregation_mst.rs  build_mst_with_workers.rs
csv/: entry_16.csv  entry_16_2.csv  entry_16_3.csv
examples/: aggregation_flow.rs
scripts/: test_sending_entry.sh
src/: aggregation_merkle_sum_tree.rs  json_mst.rs  lib.rs  main.rs  mini_tree_generator.rs
src/data/: entry_128.csv  entry_2_11_1.csv  entry_2_11_2.csv  entry_2_11_3.csv  entry_2_11_4.csv  entry_2_13.csv  entry_32_1.csv  entry_32_2.csv  entry_32_3.csv  entry_32_4.csv
src/executor/: cloud_spawner.rs  container_spawner.rs  executor.rs  local_spawner.rs  mock_spawner.rs  mod.rs  service_spawner.rs  spawner.rs  test.rs  utils.rs
src/orchestrator/: entry_csv_parser.rs  mod.rs  orchestrator.rs  test.rs
src/orchestrator/csv/: entry_16.csv  entry_16_2.csv  entry_16_4.csv
