[package]
name = "summa-aggregation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
const_env = "0.1.2"
num-bigint = "0.4.4"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
summa-backend = { git = "https://github.com/summa-dev/summa-solvency", branch = "v1-improvements-and-consolidation" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
tokio = { version = "1.34.0", features = ["full"] }
reqwest = "0.11.22"
csv = "1.3.0"
rand = "0.8.5"
futures = "0.3.29"
bollard = "0.15.0"
tokio-util = "0.7.10"
serde_yaml = "0.9.27"
rayon = "1.8.0"
 
[[bin]]
name = "mini-tree-server"
path = "bin/mini_tree_server.rs"

[features]
docker = []
docker-swarm = []
